Add workflow_dispatch trigger to CI for manual workflow execution

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
         branches: [master]
     pull_request:
         branches: [master]
+    workflow_dispatch: # Allows manual triggering of the workflow
 
 jobs:
     build:
@@ -29,6 +30,7 @@ jobs:
               run: dotnet test --no-restore --verbosity normal
 
             - name: Publish to nuget
+              if: github.event_name == 'workflow_dispatch' # Only runs when manually triggered for deployment
               env:
                   NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
               run: dotnet nuget push HelpScoutSharp/bin/Release/*.nupkg  -s https://api.nuget.org/v3/index.json --skip-duplicate -k $NUGET_API_KEY
